--- a/app/src/main/res/color/chip_text_color.xml
+++ b/app/src/main/res/color/chip_text_color.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- State when checked/selected/focused: White -->
     <item android:color="#FFFFFFFF" android:state_checked="true" />
+    <item android:color="#FFFFFFFF" android:state_selected="true" />
+    <item android:color="#FFFFFFFF" android:state_focused="true" />
+
+    <!-- Default state: White -->
+    <item android:color="#FFFFFFFF" />
 </selector>
