--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,26 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Focused State: Red Border -->
     <item android:state_focused="true">
         <shape android:shape="rectangle">
-            <solid android:color="#00000000" />
-            <corners android:radius="8dp" />
+            <!-- Background will be set dynamically via backgroundTintList in Kotlin -->
+            <solid android:color="@android:color/transparent" />
             <stroke android:width="3dp" android:color="#E50914" />
+            <corners android:radius="8dp" />
         </shape>
     </item>
 
-    <item android:state_pressed="true">
-        <shape android:shape="rectangle">
-            <solid android:color="#B20710" />
-            <corners android:radius="8dp" />
-            <stroke android:width="3dp" android:color="#E50914" />
-        </shape>
-    </item>
-
+    <!-- Default State -->
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#00000000" />
+            <solid android:color="#1A1A1A" />
             <corners android:radius="8dp" />
-            <stroke android:width="1dp" android:color="#FFFFFF" />
         </shape>
     </item>
 </selector>
