--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,12 +19,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
+        <!-- Added padding to make focus border visible -->
         <ImageButton
             android:id="@+id/appLogo"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_marginTop="4dp"
             android:layout_marginStart="4dp"
+            android:padding="4dp"
             android:background="@drawable/selector_focus_border"
             android:src="@mipmap/ic_launcher"
             android:scaleType="fitCenter"
