--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
     </data>
@@ -11,18 +12,19 @@
         android:background="#000000"
         android:padding="16dp">
 
+        <!-- Moved down slightly and removed redundant button constraint -->
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/searchCard"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="40dp"
             android:layout_marginEnd="16dp"
             app:cardBackgroundColor="#1A1A1A"
             app:cardCornerRadius="8dp"
             app:cardElevation="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btnSearch">
+            app:layout_constraintEnd_toEndOf="parent">
 
             <androidx.appcompat.widget.SearchView
                 android:id="@+id/searchView"
@@ -33,17 +35,6 @@
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
         </com.google.android.material.card.MaterialCardView>
-
-        <Button
-            android:id="@+id/btnSearch"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:text="Search"
-            android:textColor="@android:color/white"
-            android:background="@drawable/button_background"
-            app:layout_constraintTop_toTopOf="@id/searchCard"
-            app:layout_constraintBottom_toBottomOf="@id/searchCard"
-            app:layout_constraintEnd_toEndOf="parent" />
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/filterChipGroup"
@@ -101,7 +92,7 @@
             android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@id/filterChipGroup"
             app:layout_constraintStart_toStartOf="parent"
-            android:text="0 results found" />
+            tools:text="10 results found" />
 
         <FrameLayout
             android:layout_width="0dp"
