--- a/app/src/main/res/layout/item_cast_chip.xml
+++ b/app/src/main/res/layout/item_cast_chip.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/castName"
-    android:layout_width="match_parent"
+<com.google.android.material.chip.Chip xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/badge_background"
-    android:textColor="@android:color/white"
-    android:textSize="14sp"
-    android:textAlignment="center"
+    android:minHeight="24dp"
+    android:minWidth="70dp"
     android:gravity="center"
-    android:padding="10dp"
-    android:layout_margin="2dp"
-    android:maxLines="1"
-    android:ellipsize="end" />
+    android:checkable="true"
+    android:textAlignment="center"
+    android:textSize="12sp"
+    android:textColor="@color/chip_text_color"
+    style="@style/Widget.MaterialComponents.Chip.Choice"
+    app:chipBackgroundColor="@color/chip_background_selector"
+    app:chipStrokeColor="@color/chip_stroke_selector"
+    app:chipStrokeWidth="3dp"
+    android:layout_marginStart="4dp"
+    android:layout_marginEnd="4dp"
+    android:focusable="true"
+    android:clickable="true" />
