--- a/app/src/main/res/layout/item_catalog_chip.xml
+++ b/app/src/main/res/layout/item_catalog_chip.xml
@@ -12,6 +12,9 @@
     android:textColor="@color/chip_text_color"
     style="@style/Widget.MaterialComponents.Chip.Choice"
     app:chipBackgroundColor="@color/chip_background_selector"
-    app:chipCornerRadius="12dp"
+    app:chipStrokeColor="@color/chip_stroke_selector"
+    app:chipStrokeWidth="3dp"
     android:layout_marginStart="4dp"
-    android:layout_marginEnd="4dp" />
+    android:layout_marginEnd="4dp"
+    android:focusable="true"
+    android:clickable="true" />
