--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,24 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="netflix_red">#E50914</color>
-    <color name="netflix_red_dark">#B20710</color>
-    <color name="very_dark_red">#140000</color> <color name="white">#FFFFFF</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="gray_dark">#333333</color>
-    <color name="gray_medium">#888888</color>
-    <color name="gray_light">#BBBBBB</color>
+    <color name="white">#FFFFFFFF</color>
 
-    <color name="background_gradient_start">#140000</color>
-    <color name="background_gradient_end">#330000</color>
-    <color name="fastlane_background">#0096a6</color>
-    <color name="search_opaque">#ffaa3f</color>
-    <color name="selected_background">#E50914</color>
-    <color name="default_background">#140000</color> <color name="button_background_normal">#140000</color>
-    <color name="button_background">#140000</color>
+    <!-- App Specific Colors -->
+    <color name="app_background">#111111</color>
 
-    <color name="indigo_600">#4F46E5</color>
-    <color name="gray_800">#1F2937</color>
-    <color name="gray_700">#374151</color>
+    <!-- Added Missing Resources -->
+    <color name="color_primary">#FF6200EE</color>
+    <color name="color_primary_variant">#FF3700B3</color>
+    <color name="color_on_primary">#FFFFFFFF</color>
 
-    <color name="app_background">#140000</color> <color name="colorAccent">#E50914</color>
+    <color name="color_secondary">#FF03DAC6</color>
+    <color name="color_secondary_variant">#FF018786</color>
+    <color name="color_on_secondary">#FF000000</color>
+
+    <color name="colorAccent">#FF03DAC5</color>
+
+    <!-- Background Colors -->
+    <color name="default_background">#333333</color>
+    <color name="selected_background">#555555</color>
+    <color name="fastlane_background">#000000</color>
+    <color name="search_opaque">#CC111111</color>
+
+    <!-- Gradient Colors -->
+    <color name="background_gradient_start">#424242</color>
+    <color name="background_gradient_end">#111111</color>
 </resources>
